docs/22.0/Quick-Start.md
# Quick Start Guide

&nbsp;

## How do I import Bulb into my game?

GameMaker Studio 2 allows you to import assets, including scripts and shaders, directly into your project via the "Local Package" system. From the [Releases](https://github.com/JujuAdams/bulb/releases) tab for this repo, download the .yymp file for the latest version. In the GMS2 IDE, load up your project and click on "Tools" on the main window toolbar. Select "Import Local Package" from the drop-down menu then import all scripts and shaders from the Bulb package.

&nbsp;

## How does Bulb work?

Bulb is comprised of four main components:

1. Renderers
2. Lights (point and directional)
3. Occluders (static and dynamic)
4. Overlays (shadows and lights)

Renderers act as the main "controllers" for Bulb's lighting system. Lights and occluders work together to create areas of light and shadow, and both lights and occluders must be added to the same renderer to affect each other. Overlays are drawn last and allow you to further tweak the appearance of the overall lighting output. Renderers contain a [surface](https://manual.yoyogames.com/GameMaker_Language/GML_Reference/Drawing/Surfaces/Surfaces.htm) that is used to hold lighting data, and they also contain a handful of [vertex buffers](https://manual.yoyogames.com/Additional_Information/Guide_To_Primitives_And_Vertex_Building.htm) that are used to hold occluder geometry in a format that's fast for a GPU to render.

Renderers must be updated regularly (typically once a frame) in order for the lighting information on their surface to be up-to-date with the current game state. Renderers must also be manually instructed to draw their surface for that surface to be visible. We'll cover how to do this below. Finally, renderers **must have their memory freed manually** by calling their `.Free()` method when you don't need the renderer any more. Not calling `.Free()` will result in a memory leak that may end up crashing your game.

The standard Bulb lights emit light shaped by using a sprite and cast shadows emitting from a single point. They can be rotated, scaled, translated, coloured etc. as you see fit by adjusting their member variables. As mentioned above, lights must be added to a renderer to be visible. Lighting sprites respect the origin of a sprite so conical lights, whilst internally considered point sources within Bulb, are supported by moving the sprite's origin. A sunlight light source, also known as a directional light, is also available in Bulb.

Occluders are defined as a series of shadow-casting edges ("lines") that are typically arranged into polygons. Occluders can be scaled and rotated by adjusting their member variables. There are two subtypes of occluder - "static" and "dynamic". Dynamic occluders can be added and removed to/from a renderer, and can be moved or otherwise transformed, every frame without any extra work. Static occluders are not as flexible but are much faster.

Overlays are used as a way to further trim and tidy up lighting. Shadow overlays can be used to "delete" regions of light from the scene. This is useful in platformers to create the illusion of depth by allowing assets to be positioned between the camera and the lighting plane, and it can be used in top-down games with perspective to shadow the tops of tall objects. Light overlays are rendered at the very end of the pipeline and can be used for emissive glows or to highlight critical gameplay components, such as a chest or key that the player needs to progress.

&nbsp;

## How do I get a basic scene up and running?

The following is a basic setup guide using *dynamic* rather than *static* occluders. In general, you will want to use static occluders as much as possible to improve performance.

&nbsp;

### 1. Create a new project and import Bulb

[See above](Quick-Start#how-do-i-import-bulb-into-my-game) for instructions on importing Bulb. 

&nbsp;

### 2. Create a new room

Make sure that the room has a white background so you can see where the light is! All the objects we'll be adding should also have an instance placed in the room.

&nbsp;

### 3. Create a renderer

In a new object called `objLightController`, we create a Bulb renderer. A renderer will be instantiated with a bunch of default properties set up for us. We're going to override a few of them to make this demo clearer to follow: We choose a dark (but not pitch black) ambient colour to demonstrate lighting and we choose a basic hard shadow lighting mode.

We're also going to be drawing the application surface manually in the next step so we'll need to turn off automatic application surface drawing too.

```GML
///Create Event for objLightController

//Instantiate and set up a renderer
renderer = new BulbRenderer();
renderer.ambientColor = c_dkgray;
renderer.soft = false;
renderer.smooth = false;
```

&nbsp;

### 4. Call the update method and draw function

In the Post-Draw event for `objLightController` we update the renderer and light the application surface. The `.Update()` call ensures what's on the lighting surface matches the game state, and the `BulbApplyLightingToSurface()` call applies lighting directly to the application surface. We use the Post-Draw event as this is where the application surface is typically drawn as part of GameMaker's native draw pipeline.

```GML
///Post-Draw Event for objLightController

//Update the lights and shadows on the renderer
renderer.Update();

//Apply the lighting to the application surface
BulbApplyLightingToSurface(renderer, application_surface);
```

?> `.Update()` can be called in any event, but it's often convenient to execute it before drawing the lighting surface.

!> `BulbApplyLightingToSurface()` is a convenient function but it is slow. If you are worried about performance, you should use `BulbDrawLitSurface()`.

&nbsp;

### 5. Call the `.Free()` method

In `objLightController`'s Clean Up Event we call the all-important `.Free()` method to ensure we don't have a memory leak.

```GML
///Clean Up Event for objLightController

renderer.Free();
```

&nbsp;

### 6. Add a light

In a new object called `objLight` we create a Room Start event (which is guaranteed to execute after `objLightController`'s Create event). In this event we define a light that uses `sprLight` to determine how it looks (if you need a quick light sprite, you can grab [a test sprite](https://github.com/JujuAdams/Bulb/blob/master/sprites/sLight512/719fe171-a783-4aae-9fda-bdd9933d9ae4.png) from the Bulb repo). Make sure that the origin of the sprite is set at the visual origin of the light sprite.

```GML
///Room Start Event for objLight

light = new BulbLight(objLightController.renderer, sprLight, 0, x, y);
```

&nbsp;

### 7. Add an occluder

In a new object called `objPlayer` we create a Room Start event (which is guaranteed to execute after `objLightController`'s Create event). In this event we create an occluder and define the shadow-casting edges for that occluder. In the Step event of `objPlayer` we add some basic movement code and move the occluder to match the player's position.

The code below uses `objPlayer`'s bounding box. For this to work, `objPlayer` must be given a sprite.

?> Please note that Bulb's edges should be defined in a **clockwise** direction.

```GML
///Room Start Event for objPlayer

//Create a new occluder that the player will use to block light
occluder = new BulbDynamicOccluder(objLightController.renderer);

//Move the occluder on top of the player
occluder.x = x;
occluder.y = y;

//Define a simple rectangular occluder that fits the bounding box of the player's sprite
//Note that edge coordinates are relative to the occluder's x/y position
//N.B. Don't forget to give objPlayer a sprite otherwise this code won't work!
occluder.AddEdge(bbox_left  - x, bbox_top    - y, bbox_right - x, bbox_top    - y);
occluder.AddEdge(bbox_right - x, bbox_top    - y, bbox_right - x, bbox_bottom - y);
occluder.AddEdge(bbox_right - x, bbox_bottom - y, bbox_left  - x, bbox_bottom - y);
occluder.AddEdge(bbox_left  - x, bbox_bottom - y, bbox_left  - x, bbox_top    - y);
```

```GML
///Step Event for objPlayer

//Move the player
x += 4*(keyboard_check(vk_right) - keyboard_check(vk_left));
y += 4*(keyboard_check(vk_down) - keyboard_check(vk_up));

//Update the position of the occluder to match this instance's position
occluder.x = x;
occluder.y = y;
```

&nbsp;

### 8. Run the game!

With any luck upon running the game you'll see a light and a shadow cast by the player instance. As you move the player around, the shadow should change position such that it's pointing away from the light. As an additional exercise, try adding more lights and occluders. You can also start tweaking parameters on the renderer and lights to create a lighting setup that looks best for your game. 

Finally, most games will be using a camera. You can specify a camera when creating a renderer (`new BulbRenderer(camera)`) or you can change the camera for a renderer with the `.SetCamera()` method.
